[gd_scene load_steps=8 format=3 uid="uid://besfnnu5msblc"]

[ext_resource type="Script" path="res://prefabs/Knob/Knob.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://chwia5p33ca06" path="res://arts/main scene/Dial back.png" id="2_pbwmh"]
[ext_resource type="AudioStream" uid="uid://epmj6pcl5y8m" path="res://sounds/Switch.wav" id="3_jya4n"]
[ext_resource type="Texture2D" uid="uid://c50j574vmyyu7" path="res://arts/main scene/Dial knob.png" id="3_qqu10"]
[ext_resource type="Script" path="res://scripts/AudioRandomizer.gd" id="4_t11wf"]
[ext_resource type="AudioStream" uid="uid://c2igwucp5k6ym" path="res://sounds/FireLoop.ogg" id="5_xcv63"]

[sub_resource type="CircleShape2D" id="CircleShape2D_40rb2"]
radius = 86.0058

[node name="Knob" type="Node2D"]
script = ExtResource("1")

[node name="back" type="Sprite2D" parent="."]
position = Vector2(4, -11)
scale = Vector2(0.704643, 0.704643)
texture = ExtResource("2_pbwmh")

[node name="knob" type="Marker2D" parent="."]
rotation = -1.09258

[node name="knob" type="Sprite2D" parent="knob"]
position = Vector2(0.529485, -25.0543)
rotation = 0.171806
scale = Vector2(0.313147, 0.313147)
texture = ExtResource("3_qqu10")

[node name="knobPoint" type="Marker2D" parent="knob"]
position = Vector2(0, -56)

[node name="middlePoint" type="Marker2D" parent="."]
position = Vector2(0, -64)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_40rb2")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jya4n")
bus = &"SFX"
script = ExtResource("4_t11wf")
volume_low = -5.0

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_xcv63")
volume_db = -80.0
autoplay = true
bus = &"SFX"

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
